logs/dag_id=postgres_operator_dag/run_id=manual__2024-05-06T105626.884611+0000/task_id=insert_to_postgres/attempt=1.log
[2024-05-06T10:56:33.936+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-06T10:56:33.960+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:56:26.884611+00:00 [queued]>
[2024-05-06T10:56:33.970+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:56:26.884611+00:00 [queued]>
[2024-05-06T10:56:33.971+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 3
[2024-05-06T10:56:33.986+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): insert_to_postgres> on 2024-05-06 10:56:26.884611+00:00
[2024-05-06T10:56:33.992+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=967) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-06T10:56:33.995+0000] {standard_task_runner.py:63} INFO - Started process 975 to run task
[2024-05-06T10:56:33.994+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag', 'insert_to_postgres', 'manual__2024-05-06T10:56:26.884611+00:00', '--job-id', '105', '--raw', '--subdir', 'DAGS_FOLDER/kachevo.py', '--cfg-path', '/tmp/tmp5h5nrv7c']
[2024-05-06T10:56:33.997+0000] {standard_task_runner.py:91} INFO - Job 105: Subtask insert_to_postgres
[2024-05-06T10:56:34.037+0000] {task_command.py:426} INFO - Running <TaskInstance: postgres_operator_dag.insert_to_postgres manual__2024-05-06T10:56:26.884611+00:00 [running]> on host db2363de7199
[2024-05-06T10:56:34.116+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_operator_dag' AIRFLOW_CTX_TASK_ID='insert_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-05-06T10:56:26.884611+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-06T10:56:26.884611+00:00'
[2024-05-06T10:56:34.117+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-06T10:56:34.144+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-05-06T10:56:34.189+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-06T10:56:34.190+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/kachevo.py", line 72, in insert_to_postgres
    cursor.execute("INSERT INTO pet VALUES (%s)", mysql_result)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 1: INSERT INTO pet VALUES (%s)
                                ^

[2024-05-06T10:56:34.201+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_operator_dag, task_id=insert_to_postgres, execution_date=20240506T105626, start_date=20240506T105633, end_date=20240506T105634
[2024-05-06T10:56:34.213+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 105 for task insert_to_postgres (ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 1: INSERT INTO pet VALUES (%s)
                                ^
; 975)
[2024-05-06T10:56:34.250+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-06T10:56:34.265+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-06T10:56:34.267+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
